[package]
name = "glitch-rust-madness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
rocket = "0.5.0-rc.2"
